SERVER-42232 Adding a new shard renders all preceding resume tokens invalid